--- a/hw4.ipynb
+++ b/hw4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "deletable": false,
     "editable": false
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true,
     "tags": []
@@ -195,6 +195,9 @@
     "\n",
     "    This implementation only works when y only contains 0's and 1's.\n",
     "    \"\"\"\n",
+    "    def __init__(self):\n",
+    "        self.strategy = 'most_common'\n",
+    "        self.most_common_class = None\n",
     "\n",
     "    def fit(self, X, y):\n",
     "        \"\"\"\n",
@@ -207,9 +210,13 @@
     "        Returns:\n",
     "        - None\n",
     "        \"\"\"\n",
-    "        # Replace with your code\n",
-    "        ...\n",
-    "        return None  # Replace with your code\n",
+    "        if self.strategy == 'most_common':\n",
+    "            if np.mean(y) < 0.5:\n",
+    "                self.most_common_class = 0\n",
+    "            else: \n",
+    "                self.most_common_class = 1\n",
+    "     \n",
+    "        return None \n",
     "\n",
     "    def predict(self, X):\n",
     "        \"\"\"\n",
@@ -222,8 +229,7 @@
     "        - y_pred (array-like, shape (n_samples,)): Predicted target labels.\n",
     "        \"\"\"\n",
     "        predictions = np.zeros(X.shape[0])  # initializing with all predictions set to 0\n",
-    "        # Replace with your code\n",
-    "        ...\n",
+    "        predictions[:] = self.most_common_class\n",
     "        return predictions\n",
     "\n",
     "    def predict_proba(self, X):\n",
@@ -238,9 +244,13 @@
     "          Column 0 corresponds to class 0, and column 1 corresponds to class 1.\n",
     "        \"\"\"\n",
     "        probs = np.zeros((X.shape[0], 2))  # initializing all probabilities set to 0.\n",
-    "        # Replace with your code\n",
-    "        ...\n",
-    "        return probs  # Replace with your code\n",
+    "    \n",
+    "        if self.most_common_class == 0:\n",
+    "            probs[:, 0] = 1  # Assign probability 1 to class 0, 0 to class 1\n",
+    "        else:\n",
+    "            probs[:, 1] = 1  # Assign probability 1 to class 1, 0 to class 0\n",
+    "    \n",
+    "        return probs  \n",
     "\n",
     "    def score(self, X, y):\n",
     "        \"\"\"\n",
@@ -271,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "deletable": false,
     "editable": false
@@ -309,12 +319,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "deletable": false,
     "editable": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AssertionError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[6], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m np\u001b[38;5;241m.\u001b[39mallclose(\n\u001b[1;32m      2\u001b[0m     my_dc\u001b[38;5;241m.\u001b[39mpredict_proba(X_train_dummy), sk_dc\u001b[38;5;241m.\u001b[39mpredict_proba(X_train_dummy)\n\u001b[1;32m      3\u001b[0m )\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m np\u001b[38;5;241m.\u001b[39mallclose(\n\u001b[1;32m      5\u001b[0m     my_dc\u001b[38;5;241m.\u001b[39mpredict_proba(X_valid_dummy), sk_dc\u001b[38;5;241m.\u001b[39mpredict_proba(X_valid_dummy)\n\u001b[1;32m      6\u001b[0m )\n",
+      "\u001b[0;31mAssertionError\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "assert np.allclose(\n",
     "    my_dc.predict_proba(X_train_dummy), sk_dc.predict_proba(X_train_dummy)\n",
@@ -394,9 +416,135 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>link</th>\n",
+       "      <th>content</th>\n",
+       "      <th>date</th>\n",
+       "      <th>retweets</th>\n",
+       "      <th>favorites</th>\n",
+       "      <th>mentions</th>\n",
+       "      <th>hashtags</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1698308935</th>\n",
+       "      <td>https://twitter.com/realDonaldTrump/status/169...</td>\n",
+       "      <td>Be sure to tune in and watch Donald Trump on L...</td>\n",
+       "      <td>2009-05-04 13:54:25</td>\n",
+       "      <td>510</td>\n",
+       "      <td>917</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1701461182</th>\n",
+       "      <td>https://twitter.com/realDonaldTrump/status/170...</td>\n",
+       "      <td>Donald Trump will be appearing on The View tom...</td>\n",
+       "      <td>2009-05-04 20:00:10</td>\n",
+       "      <td>34</td>\n",
+       "      <td>267</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1737479987</th>\n",
+       "      <td>https://twitter.com/realDonaldTrump/status/173...</td>\n",
+       "      <td>Donald Trump reads Top Ten Financial Tips on L...</td>\n",
+       "      <td>2009-05-08 08:38:08</td>\n",
+       "      <td>13</td>\n",
+       "      <td>19</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1741160716</th>\n",
+       "      <td>https://twitter.com/realDonaldTrump/status/174...</td>\n",
+       "      <td>New Blog Post: Celebrity Apprentice Finale and...</td>\n",
+       "      <td>2009-05-08 15:40:15</td>\n",
+       "      <td>11</td>\n",
+       "      <td>26</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1773561338</th>\n",
+       "      <td>https://twitter.com/realDonaldTrump/status/177...</td>\n",
+       "      <td>\"My persona will never be that of a wallflower...</td>\n",
+       "      <td>2009-05-12 09:07:28</td>\n",
+       "      <td>1375</td>\n",
+       "      <td>1945</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                         link  \\\n",
+       "id                                                              \n",
+       "1698308935  https://twitter.com/realDonaldTrump/status/169...   \n",
+       "1701461182  https://twitter.com/realDonaldTrump/status/170...   \n",
+       "1737479987  https://twitter.com/realDonaldTrump/status/173...   \n",
+       "1741160716  https://twitter.com/realDonaldTrump/status/174...   \n",
+       "1773561338  https://twitter.com/realDonaldTrump/status/177...   \n",
+       "\n",
+       "                                                      content  \\\n",
+       "id                                                              \n",
+       "1698308935  Be sure to tune in and watch Donald Trump on L...   \n",
+       "1701461182  Donald Trump will be appearing on The View tom...   \n",
+       "1737479987  Donald Trump reads Top Ten Financial Tips on L...   \n",
+       "1741160716  New Blog Post: Celebrity Apprentice Finale and...   \n",
+       "1773561338  \"My persona will never be that of a wallflower...   \n",
+       "\n",
+       "                           date  retweets  favorites mentions hashtags  \n",
+       "id                                                                      \n",
+       "1698308935  2009-05-04 13:54:25       510        917      NaN      NaN  \n",
+       "1701461182  2009-05-04 20:00:10        34        267      NaN      NaN  \n",
+       "1737479987  2009-05-08 08:38:08        13         19      NaN      NaN  \n",
+       "1741160716  2009-05-08 15:40:15        11         26      NaN      NaN  \n",
+       "1773561338  2009-05-12 09:07:28      1375       1945      NaN      NaN  "
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "tweets_df = pd.read_csv(\"data/realdonaldtrump.csv\", index_col=0)\n",
     "tweets_df.head()"
@@ -404,9 +552,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(43352, 7)"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "tweets_df.shape"
    ]
@@ -420,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -505,40 +664,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {
     "deletable": false,
     "editable": false,
     "slideshow": {
      "slide_type": ""
-    },
-    "tags": [
-     "raises-exception"
-    ]
+    }
    },
    "outputs": [],
    "source": [
-    "# YOUR COMMENT HERE\n",
-    "countvec = CountVectorizer(stop_words=\"english\")\n",
-    "\n",
-    "# YOUR COMMENT HERE\n",
+    "# First split the data into training and testing sets 60% training, 40% testing\n",
     "X_train, X_test, y_train, y_test = train_test_split(\n",
     "    X, y, test_size=0.6, random_state=123\n",
     ")\n",
     "\n",
-    "# YOUR COMMENT HERE\n",
-    "cv_score = cross_val_score(pipe, X_train, y_train).mean()\n",
+    "# Transform text data into numerical features. Remove stop words.\n",
+    "countvec = CountVectorizer(stop_words=\"english\")\n",
     "\n",
-    "# YOUR COMMENT HERE\n",
+    "# Create a logistic regression model. \n",
+    "lr = LogisticRegression(max_iter=1000, random_state=123)\n",
+    "\n",
+    "# The pipeline will first transform the text data, then apply logistic regression for classification \n",
     "pipe = make_pipeline(countvec, lr)\n",
     "\n",
-    "# YOUR COMMENT HERE\n",
-    "lr = LogisticRegression(max_iter=1000, random_state=123)"
+    "# Perform cross validation and get the mean score\n",
+    "cv_score = cross_val_score(pipe, X_train, y_train).mean()\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -546,9 +705,17 @@
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.8953863898500576\n"
+     ]
+    }
+   ],
    "source": [
-    "..."
+    "print(cv_score)"
    ]
   },
   {
@@ -602,25 +769,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.7423875432525952\n"
+     ]
+    }
+   ],
    "source": [
-    "dummy_cv_score = None\n",
+    "dummy = DummyClassifier(strategy=\"prior\")\n",
+    "dummy_cv_score = cross_val_score(dummy, X_train, y_train).mean()\n",
     "\n",
-    "..."
+    "print(dummy_cv_score)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {
     "deletable": false,
     "editable": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<p><strong><pre style='display: inline;'>q2.2</pre></strong> passed! 🌈</p>"
+      ],
+      "text/plain": [
+       "q2.2 results: All test cases passed!"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "grader.check(\"q2.2\")"
    ]
@@ -676,31 +866,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "_Type your answer here, replacing this text._"
+    "1) Dummy Classifier score was 0.74 and logistic regression score is 0.89. This means that the logistic regression model has captured meaningful patterns in our data, leading to more accurate predictions than just the dummy classifier. It is definitely more useful than the dummy classifier. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.89186851 0.90023068 0.89561707 0.88956171 0.89965398]\n"
+     ]
+    }
+   ],
    "source": [
-    "cv_scores = ...\n",
-    "..."
+    "cv_scores = cross_val_score(pipe, X_train, y_train)\n",
+    "print(cv_scores)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
    "source": [
-    "..."
+    "3) The 5 scores above are very close to each other.\n",
+    "4) The cities dataset has approx 210 rows, whereas this trump tweets dataset has over 43,000 rows (43352), so this dataset is definitely magnitudes larger than the cities dataset. Because the dataset is large, the model has enough data to learn from and also perform a better cross validation, hence the cross validation scores are close to each other, as almost all patterns in the data are accounted for."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -741,7 +943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {
     "deletable": false,
     "editable": false
@@ -787,26 +989,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ellipsis"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "tweet = None\n",
-    "prob = None\n",
+    "# Get the probability array for the test set\n",
+    "probabilities = pipe_lr.predict_proba(X_test)\n",
+    "\n",
+    "\n",
+    "# Get only the second column which has probability of being viral\n",
+    "viral_prob = probabilities[:, 1]\n",
+    "\n",
+    "\n",
+    "# Find the maximum of the viral_prob array\n",
+    "max_prob = np.max(viral_prob)\n",
+    "\n",
+    "# Find the index of the maximum probability\n",
+    "max_index = np.argmax(viral_prob)\n",
+    "\n",
+    "# Use the index of max_prob to get the corresponding tweet from the test set\n",
+    "tweet = X_test.iloc[max_index] \n",
+    "prob = max_prob\n",
     "\n",
     "..."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "metadata": {
     "deletable": false,
     "editable": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<p><strong><pre style='display: inline;'>q2.4</pre></strong> passed! 🙌</p>"
+      ],
+      "text/plain": [
+       "q2.4 results: All test cases passed!"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "grader.check(\"q2.4\")"
    ]
@@ -845,7 +1087,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "metadata": {
     "deletable": false,
     "editable": false
@@ -1739,9 +1981,9 @@
  "metadata": {
   "celltoolbar": "Create Assignment",
   "kernelspec": {
-   "display_name": "Python [conda env:cpsc330]",
+   "display_name": "cpsc330",
    "language": "python",
-   "name": "conda-env-cpsc330-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1916,11 +2158,6 @@
       }
      ]
     }
-   }
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
    }
   }
  },
